package com.acme.sales.model.utils.events;

/**
 * Handles the events
 */
public interface EventHandler {
    public void handle(Event event);
}


